# VirtualArtist

./: CMakeLists.txt
inc/core/: field.h
inc/core/low_level_layer/: display.h  hardware_event.h  simple_text.h  surface.h
inc/gui/: canvas.h  frame.h  widget.h
inc/gui/commands/: command.h  paint_canvas.h
inc/gui/graphic/: drawable_texture.h  filled_circle.h  filled_rectangle.h  graphic.h  graphic_frame.h  text.h
inc/gui/manipulation/: button.h  command.h
inc/tools/: array.hpp  list.hpp  square_bracket_layer.hpp  vector.hpp
src/: main.cpp
src/core/: field.cpp
src/core/low_level_layer/: display.cpp  hardware_event.cpp  simple_text.cpp  surface.cpp
src/gui/: canvas.cpp  frame.cpp  software_event.cpp  widget.cpp
src/gui/commands/: paint_canvas.cpp
src/gui/graphic/: drawable_texture.cpp  filled_circle.cpp  filled_rectangle.cpp  graphic_frame.cpp  text.cpp
src/gui/manipulation/: button.cpp  command.cpp
